--- a/project/src/main/webapp/WEB-INF/web.xml
+++ b/project/src/main/webapp/WEB-INF/web.xml
@@ -35,12 +35,12 @@
 		
 		<multipart-config>
 			<location>c:\\upload\\temp</location>
-			<max-file-size>20971520</max-file-size>
-			<max-request-size>41943040</max-request-size>
-			<file-size-threshold>20971520</file-size-threshold>
+			<max-file-size>20971520</max-file-size> <!-- 1MB * 20 -->
+			<max-request-size>41943040</max-request-size> <!-- 40MB -->
+			<file-size-threshold>20971520</file-size-threshold> <!-- 20MB -->
 		</multipart-config>
 	</servlet>
-		
+	
 	<servlet-mapping>
 		<servlet-name>appServlet</servlet-name>
 		<url-pattern>/</url-pattern>
