오류테스트
123

--- a/project/.project
+++ b/project/.project
@@ -3,6 +3,7 @@
 	<name>project</name>
 	<comment></comment>
 	<projects>
+		<project>Servers</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
